--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-query": "^5.90.12",
     "express": "^5.2.1",
     "lucide-react": "^0.561.0",
