--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^17.2.3",
         "express": "^5.0.1",
         "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
         "joi": "^18.0.2",
         "jsonwebtoken": "^9.0.2",
         "socket.io": "^4.8.1",
